Primera solución overlapping del fixed navbar

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,6 +13,7 @@ body
     font-size: 20px;
     margin: 0;
     position: fixed;
+
     width: 100vw;
 }
 
@@ -23,7 +24,6 @@ body
 #container
 {
     width: 100%;
-    padding: 0;
     text-align: left;
     border: 1px solid #DDD; 
     margin: 0 auto;
@@ -34,10 +34,7 @@ body
 }
 #post
 {
-    padding: 1em;
     background: white;
-    margin-top: 120px;
-
 }
 #footer
 {
@@ -55,4 +52,20 @@ body
 
 #container #h2{
     font-size: 25px;
+}
+
+#home{
+    padding-top: 12vh;
+}
+#education{
+    padding-top: 12vh;
+}
+#research{
+    padding-top: 12vh;
+}
+#others{
+    padding-top: 12vh;
+}
+#experience{
+    padding-top: 12vh;
 }
